WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197153
[JSC] useJIT should subsume useRegExpJIT
https://bugs.webkit.org/show_bug.cgi?id=197153
Summary
[JSC] useJIT should subsume useRegExpJIT
Yusuke Suzuki
Reported
2019-04-22 02:45:10 PDT
[JSC] useJIT should subsume useRegExpJIT
Attachments
Patch
(5.56 KB, patch)
2019-04-22 02:45 PDT
,
Yusuke Suzuki
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-04-22 02:45:56 PDT
Created
attachment 367930
[details]
Patch
EWS Watchlist
Comment 2
2019-04-22 02:48:21 PDT
Attachment 367930
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/RegExp.cpp:261: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/runtime/RegExp.cpp:319: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 3
2019-04-22 11:30:37 PDT
Committed
r244505
: <
https://trac.webkit.org/changeset/244505
>
Radar WebKit Bug Importer
Comment 4
2019-04-22 11:31:41 PDT
<
rdar://problem/50100848
>
Yusuke Suzuki
Comment 5
2019-05-10 09:18:40 PDT
This improved some memory footprint in useJIT=false environment since, perviously, even if useJIT=false is specified, we still have useRegExpJIT=false, and we attempt to initialize ExecutableAllocator and being rejected by entitlements. Now we do not do that.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug