[JSC] useJIT should subsume useRegExpJIT https://bugs.webkit.org/show_bug.cgi?id=197153

Reviewed by Alex Christensen.

useJIT should subsume useRegExpJIT. We should immediately disable JIT feature if useJIT = false,
even if useRegExpJIT is true.

* dfg/DFGCapabilities.cpp:
(JSC::DFG::isSupported):
* runtime/Options.cpp:
(JSC::recomputeDependentOptions):
* runtime/RegExp.cpp:
(JSC::RegExp::compile):
(JSC::RegExp::compileMatchOnly):
* runtime/VM.cpp:
(JSC::enableAssembler):
(JSC::VM::canUseRegExpJIT): Deleted.
* runtime/VM.h:

Canonical link: https://commits.webkit.org/211380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244505 268f45cc-cd09-0410-ab3c-d52691b4dbfc