Source/JavaScriptCore/runtime/VM.cpp
@@ -190,7 +190,7 @@ Atomic<unsigned> VM::s_numberOfIDs;
 #if ENABLE(ASSEMBLER)
 static bool enableAssembler()
 {
-    if (!Options::useJIT() && !Options::useRegExpJIT())
+    if (!Options::useJIT())
         return false;
 
     char* canUseJITString = getenv("JavaScriptCoreUseJIT");
@@ -230,20 +230,6 @@ void VM::computeCanUseJIT()
     s_canUseJITIsSet = true;
 #endif
     s_canUseJIT = VM::canUseAssembler() && Options::useJIT();
-#endif
-}
-
-bool VM::canUseRegExpJIT()
-{
-#if ENABLE(YARR_JIT)
-    static std::once_flag onceKey;
-    static bool enabled = false;
-    std::call_once(onceKey, [] {
-        enabled = VM::canUseAssembler() && Options::useRegExpJIT();
-    });
-    return enabled;
-#else
-    return false; // interpreter only
 #endif
 }
 
